# KitPanel

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: cache.rs  components.rs  main.rs  request.rs  servers.rs  settings.rs  tab_nav.rs  theme.rs
client/src/pages/: home.rs  mod.rs
client/src/views/: home.rs  login.rs  mod.rs  settings.rs
minecraft_panel_client/src/: incoming.rs  main.rs
minecraft_panel_server/: Cargo.toml
minecraft_panel_server/src/: json.rs  main.rs  outgoing.rs
models/: Cargo.toml
models/src/: lib.rs
server/: Cargo.toml
server/src/: authentication.rs  configuration.rs  fs.rs  json.rs  main.rs  process.rs  server_config.rs
src/: main.rs
