[package]
name = "kit_panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["client", "models", "server"]

[workspace.dependencies]
uuid = "1.6.1"
serde_json = "1.0.111"
serde = "1.0.194"
