[package]
name = "kit_panel_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }

iced = { version = "0.10.0", features = [
  "lazy",
  "tokio",
  "advanced",
  "image",
  "web-colors",
] }
iced-hex-color = "0.1.1"

tokio = "1.35.1"

reqwest = "0.11.23"

indexmap = { version = "2.1.0", features = ["serde"] }

uuid = { workspace = true, features = ["serde"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
