[package]
name = "minecraft_panel_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foxhole = { git = "https://github.com/kay-conte/foxhole-rs" }
models = { path = "../models" }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["preserve_order"] }
