[package]
name = "minecraft_panel_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }

foxhole = { git = "https://github.com/kay-conte/foxhole-rs" }

serde = { version = "1.0.194", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["preserve_order"] }

uuid = { workspace = true, features = ["v4", "serde"] }
