[package]
name = "kit_panel_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }

foxhole = { path = "../../foxhole-rs" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }

uuid = { workspace = true, features = ["v4", "serde"] }
